bug fix users confirmation dialog on mobile

--- a/src/Routes/Private/Home/Pages/Users/users.css
+++ b/src/Routes/Private/Home/Pages/Users/users.css
@@ -70,7 +70,7 @@ div.users .clickable-icon{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
+  
 
     border: 1px solid var(--primary-color);
     box-shadow: 0 2.5rem 2rem -2rem hsl(200 50% 20% / 40%);
